--- a/NovoStandNSpeedWay/Web/Views/Roles/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Roles/Index.cshtml
@@ -43,13 +43,13 @@
                 <div class="modal-body">
 
                     <div class="form-group">
-                        <input class="form-control" id="UsuarioIdInt" name="UsuarioIdInt" placeholder="Id" readonly />
+                        <input class="form-control" id="RolIdInt" name="RolIdInt" placeholder="Id" readonly />
                     </div>
 
                     <div class="col-sm-12 text-center" id="DivIsActive">
                         <input hidden type="text" id="IsActive" name="IsActive" value="true" />
-                        <label for="IsActiveBit">
-                            <input type="checkbox" id="IsActiveBit" name="IsActiveBit" />
+                        <label for="ActivoBit">
+                            <input type="checkbox" id="ActivoBit" name="ActivoBit" />
                             <span>Activo</span>
                         </label>
                     </div>
@@ -57,25 +57,14 @@
 
                     <div class="form-row">
                         <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 mt-3">
-                            <label for="Descripcion">Nombre</label>
-                            <input type="text" class="form-control" id="NombreVar" name="NombreVar" placeholder="Nombre" required maxlength="100" />
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 mt-3">
-                            <label for="UsuarioVar">Usuario</label>
-                            <input type="text" class="form-control" id="UsuarioVar" name="UsuarioVar" placeholder="Usuario" required maxlength="100" />
+                            <label for="Descripcion">Descripcion</label>
+                            <input type="text" class="form-control" id="DescripcionVar" name="DescripcionVar" placeholder="Descripcion" required maxlength="100" />
                         </div>
                     </div>
 
 
-                    <div class="form-row">
-                        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 mt-3">
-                            <label for="PasswordVar">Contraseña</label>
-                            <input type="password" class="form-control" id="PasswordVar" name="PasswordVar" placeholder="Contraseña" required maxlength="100" />
-                        </div>
-                    </div>
+
+
 
                 </div>
 
