Se creo el mantenimiento Lectores

--- a/NovoStandNSpeedWay/Web/Views/Shared/_Layout.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Shared/_Layout.cshtml
@@ -64,6 +64,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/Roles/index">Roles</a>
                         <a class="dropdown-item" href="/Usuarios/Index">Usuarios</a>
+                        <a class="dropdown-item" href="/Lectores/Index">Lectores</a>
                     </div>
                 </li>
      
