FORMA DE ADQUISICIÓN

--- a/NovoStandNSpeedWay/Web/Views/Shared/_Layout.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Shared/_Layout.cshtml
@@ -66,6 +66,7 @@
                         <a class="dropdown-item" href="/Usuarios/Index">Usuarios</a>
                         <a class="dropdown-item" href="/Lectores/Index">Lectores</a>
                         <a class="dropdown-item" href="/Ubicaciones/Index">Ubicaciones</a>
+                        <a class="dropdown-item" href="/FormaAdquisicion/Index">Forma De Adquisición</a>
                     </div>
                 </li>
      
