--- a/NovoStandNSpeedWay/Web/Views/Shared/_Layout.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Shared/_Layout.cshtml
@@ -67,6 +67,7 @@
                         <a class="dropdown-item" href="/Lectores/Index">Lectores</a>
                         <a class="dropdown-item" href="/Ubicaciones/Index">Ubicaciones</a>
                         <a class="dropdown-item" href="/FormaAdquisicion/Index">Forma De Adquisición</a>
+                        <a class="dropdown-item" href="/Activos/Index">Activos</a>
                     </div>
                 </li>
      
