--- a/NovoStandNSpeedWay/Web/Views/Ubicaciones/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Ubicaciones/Index.cshtml
@@ -67,7 +67,7 @@
 
                 <div class="modal-footer">
                     <div class="col-sm-12 text-center mt-5">
-                        <button type="submit" class="btn btn-primary" style="margin-bottom:20px !important;" id="BtnAdd" onclick="Add();">Guardar</button>
+                        <button type="submit" class="btn btn-primary" id="BtnAdd" onclick="Add();">Guardar</button>
                         <button type="submit" class="btn btn-primary" id="BtnUpdate" onclick="Add();">Actualizar</button>
                         <button type="button" class="btn btn-secondary" id="BtnCancelar" data-dismiss="modal">Cancelar</button>
                     </div>
