--- a/NovoStandNSpeedWay/Web/Views/Shared/_Layout.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <title>@ViewBag.Title NovoNSpeedWay </title>
 
 
     <!--Bootstrap CSS-->
@@ -52,7 +52,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">Hidden brand</a>
+            <a class="navbar-brand" href="/Home/Index"> <img  src="~/img/NOVO_logosmall-1.png"  class="img-fluid"/> </a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
                     <a class="nav-link" href="/Home/Index">Home <span class="sr-only">(current)</span></a>
@@ -78,11 +78,22 @@
 
 
 
-    <div class="container body-content" id="footer"> 
+    <div class="container body-content" id="footer">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+        <hr />
+        <footer class="mt-5 footer">
+            <div class="container text-center">
+                <a href="/Home/Index"><img src="/img/NOVO_logosmall-1.png" class="logo-brand mt-5 img-fluid"></a>
+                <p class="mt-3 pFooter h6">Todos los Derechos Reservados @DateTime.Now.Year   NovoNSpeedWay TI</p>
+                <ul>
+                    <li class="mb-5 list-inline-item"><a href="https://www.facebook.com/Novosysmx" target="_blank"><img src="/img/footer/facebook.svg" class="img-fluid"></a></li>
+                    <li class="mb-5 list-inline-item"><a href="https://www.instagram.com/novosysrfid/" target="_blank"><img src="/img/footer/instagram.svg" class="img-fluid"></a></li>
+                    <li class="mb-5 list-inline-item"><a href="https://api.whatsapp.com/send?phone=528120402468&text=Hola" target="_blank"><img src="/img/footer/whatsapp.svg" class="img-fluid"></a></li>
+                    <li class="mb-5 list-inline-item"><a href="https://www.youtube.com/channel/UCYVaR-qeV_OqvzI1WEtaA6w" target="_blank"><img src="/img/footer/youtube.svg" class="img-fluid"></a></li>
+                    <li class="mb-5 list-inline-item"><a href="https://www.novosys.com.mx/" target="_blank"><img src="/img/footer/dribbble.svg" class="img-fluid"></a></li>
+                </ul>
+            </div>
         </footer>
     </div>
 
