MUCHOS CHANGES EN API Y EN WEB LOCAL DATABASE

--- a/NovoStandNSpeedWay/Web/Content/Site.css
+++ b/NovoStandNSpeedWay/Web/Content/Site.css
@@ -1,12 +1,14 @@
 ﻿body {
     padding-top: 50px;
-    padding-bottom: 20px;
+    padding-bottom : 0;
+    overflow-x: hidden;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    padding-bottom : 0;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -17,11 +19,11 @@
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
+/*input,
 select,
 textarea {
     max-width: 280px;
-}
+}*/
 
 
 .html , body{
@@ -33,4 +35,18 @@ textarea {
 .modal-title{
     color: white;
     font-family : sans-serif;
+}
+
+.modal {
+    overflow-y : auto !important;
+}
+
+
+.activar {
+    color: coral !important;
+}
+
+
+.ul > li > a:hover{
+    color : darkslategrey !important;
 }
