--- a/NovoStandNSpeedWay/Web/Views/FormaAdquisicion/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/FormaAdquisicion/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿
 
+
+@{
+    ViewBag.Title = "Forma De Adquisición";
+}
+
+
 <script src="~/Scripts/Generals.js"></script>
 <script src="~/Scripts/Jquery Form Steps/js/sweetalert.min.js"></script>
 <script src="~/Scripts/FormaAdquisicion.js"></script>
@@ -9,7 +15,7 @@
 
 
 
-<h5 style="display:none;" class="ml-2 mt-2" id="Titulo">Forma De Adquisición</h5>
+<h5 style="display:none;" class="ml-2" id="Titulo">Forma De Adquisición</h5>
 
 
 <div id="container">
@@ -49,7 +55,7 @@
 
                     <div class="form-group">
                         <label for="FormaAdquisicionIdInt">Id</label>
-                        <input class="form-control col-12" id="FormaAdquisicionIdInt" name="FormaAdquisicionIdInt" placeholder="Id"  readonly/>
+                        <input class="form-control col-12" id="FormaAdquisicionIdInt" name="FormaAdquisicionIdInt" placeholder="Id" readonly />
                     </div>
 
 
