--- a/NovoStandNSpeedWay/Web/Views/Lectores/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Lectores/Index.cshtml
@@ -15,7 +15,7 @@
 </style>
 
 
-<h5 style="display:none;" class="ml-2 mt-2" id="Titulo">LECTORES</h5>
+<h5 style="display:none;" class="ml-2" id="Titulo">LECTORES</h5>
 
 
 <div id="container">
