--- a/NovoStandNSpeedWay/Web/Views/Roles/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Roles/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿
+@{
+    ViewBag.Title = "Roles";
+}
+
 <link href="~/Content/Usuarios.css" rel="stylesheet" />
 <script src="~/Scripts/Generals.js"></script>
 <script src="~/Scripts/Jquery Form Steps/js/sweetalert.min.js"></script>
@@ -16,7 +20,7 @@
 
 <div class="usuario" />
 
-<h5 style="display:none;" class="ml-2 mt-2" id="Titulo">Roles</h5>
+<h5 style="display:none;" class="ml-2" id="Titulo">Roles</h5>
 
 
 <div id="container">
