--- a/NovoStandNSpeedWay/Web/Views/Ubicaciones/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Ubicaciones/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿
 
+@{
+    ViewBag.Title = "Ubicaciones";
+}
+
+
 <script src="~/Scripts/Generals.js"></script>
 <script src="~/Scripts/Jquery Form Steps/js/sweetalert.min.js"></script>
 <script src="~/Scripts/Ubicaciones.js"></script>
@@ -9,7 +14,7 @@
 
 
 
-<h5 style="display:none;" class="ml-2 mt-2" id="Titulo">Ubicaciones</h5>
+<h5 style="display:none;" class="ml-2" id="Titulo">Ubicaciones</h5>
 
 
 <div id="container">
