--- a/NovoStandNSpeedWay/Web/Views/Login/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Login/Index.cshtml
@@ -10,6 +10,8 @@
 
     <form id="frmLogin" class="col-md-5 col-lg-3 container" method="POST">
 
+        <h4>Iniciar Sesión</h4>
+
         <div class="row pt-2 pb-2" style="border:2px lightgray solid; border-radius:5px;">
 
             <div class="form-group col-sm-12">
@@ -22,7 +24,16 @@
                 <input class="form-control" id="Password" type="password" name="Password" required placeholder="Contraseña">
             </div>
 
+
             <input type="submit" value="Acceder" class="btn btn-primary container mt-3" style="width:50%;" onclick="Login();" />
+
+            <a href="/Registrarse/OlvideContraseña" class="pt-5 pl-3" style="width:100%;">Olvidé Mi Contaseña</a>
+
+
+        </div>
+
+
+        <div id="container" class="mt-3">
 
         </div>
 
@@ -30,5 +41,13 @@
     </form>
 
 
+
 </div>
+
+
+<br /><br />
+
+
+
+
 
