--- a/NovoStandNSpeedWay/Web/Views/Registrarse/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Registrarse/Index.cshtml
@@ -15,7 +15,7 @@
 
             <div class="form-group col-md-12">
                 <label>Nombre</label>
-                <input class="form-control" id="NombreVar" type="text" name="NombreVar"  required placeholder="Nombre">
+                <input class="form-control" id="NombreVar" type="text" name="NombreVar" required placeholder="Nombre">
             </div>
 
             <div class="form-group col-md-12">
@@ -33,6 +33,9 @@
         </div>
 
         <br />
+        <div id="container" class="mt-3">
+
+        </div>
 
     </form>
 
