--- a/NovoStandNSpeedWay/Web/Views/Registrarse/OlvideContraseña.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Registrarse/OlvideContraseña.cshtml
@@ -8,9 +8,11 @@
 
 <div class="row justify-content-center">
 
-    <h4>Verificar Cuenta</h4>
+    
 
-    <form id="frmVerificarCuenta" class="col-md-5 col-lg-3 container" method="POST" action="/Registrarse/">
+    <form id="frmOlvideContraseña" class="col-md-5 col-lg-3 container" method="POST" >
+
+        <h4>Verificar Cuenta</h4>
 
         <div class="row pt-2 pb-2" style="border:2px lightgray solid; border-radius:5px;">
 
@@ -19,7 +21,7 @@
                 <input class="form-control" id="UsuarioVar" type="email" name="UsuarioVar" required placeholder="Correo Electrónico">
             </div>
 
-            <input type="submit" value="Continuar" class="btn btn-primary container mt-3" style="width:50%;" />
+            <input type="submit" value="Continuar" class="btn btn-primary container mt-3" style="width:50%;" onclick="EnviarCodigoDeVerificacion()"/>
 
         </div>
 
@@ -29,3 +31,7 @@
 
 </div>
 
+
+<div id="container" class="mt-5">
+
+</div>
