--- a/NovoStandNSpeedWay/Web/Views/Registrarse/VerificarCuenta.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Registrarse/VerificarCuenta.cshtml
@@ -8,15 +8,16 @@
 
 <div class="row justify-content-center">
 
-    <h4>Verificar Cuenta</h4>
 
     <form id="frmVerificarCuenta" class="col-md-5 col-lg-3 container" method="POST">
+
+        <h4>Verificar Cuenta</h4>
 
         <div class="row pt-2 pb-2" style="border:2px lightgray solid; border-radius:5px;">
 
             @using Web.Controllers;
             @{var hc = new HomeController();
-                var email = System.Web.HttpContext.Current.Request.Cookies.Get(hc.CockieName);
+                var email = System.Web.HttpContext.Current.Request.Cookies.Get(hc.CockieName).Value.ToString(); ;
             }
 
             <div class="form-group col-sm-12">
@@ -29,9 +30,17 @@
 
         </div>
 
+        <div id="container" class="mt-3">
+            
+        </div>
 
     </form>
 
 
 </div>
+
+<br />
+<br />
+<br />
+
 
