--- a/NovoStandNSpeedWay/Web/Views/Login/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Login/Index.cshtml
@@ -2,6 +2,15 @@
 <script src="~/Scripts/Jquery Form Steps/js/sweetalert.min.js"></script>
 
 
+<!--api google authentication-->
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+
+
+<!--google sign in-->
+<meta name="google-signin-client_id" content="293787927318-mbthjl80k67n9ru9gso1nob5lqrehisj.apps.googleusercontent.com">
+
+
+
 <br />
 <br />
 <br />
@@ -24,10 +33,18 @@
                 <input class="form-control" id="Password" type="password" name="Password" required placeholder="Contraseña">
             </div>
 
+            <div class="form-group col-sm-12">
+                <input type="submit" value="Acceder" class="btn btn-primary container mt-3" onclick="Login();" />
+            </div>
 
-            <input type="submit" value="Acceder" class="btn btn-primary container mt-3" style="width:50%;" onclick="Login();" />
 
-            <a href="/Registrarse/OlvideContraseña" class="pt-5 pl-3" style="width:100%;">Olvidé Mi Contaseña</a>
+            <a href="/Registrarse/OlvideContraseña" class="pl-3" style="width:100%;">Olvidé Mi Contaseña</a>
+
+
+            <div class="form-group col-sm-12 d-flex justify-content-center">
+                <div style="display:block !important;" class="g-signin2 pt-5" data-onsuccess="GoogleSignIn" data-theme="dark" onclick="Registrar()"></div>
+            </div>
+
 
 
         </div>
@@ -35,18 +52,19 @@
 
         <div id="container" class="mt-3">
 
+        
         </div>
+
 
 
     </form>
 
 
-
 </div>
 
 
-<br /><br />
-
+<br />
+<br />
 
 
 
