CAMBIOS AL INICIAR SESIÓN

--- a/NovoStandNSpeedWay/Web/Views/Registrarse/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Registrarse/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="row pt-2 pb-2" style="border:2px lightgray solid; border-radius:5px;">
 
             <input hidden type="text" id="IsActive" name="IsActive" value="true" />
-
+            <input hidden type="text" id="GoogleAccount" name="GoogleAccount" value="false" />
 
             <div class="form-group col-md-12">
                 <label>Nombre</label>
