--- a/NovoStandNSpeedWay/Web/Views/Home/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 <section>
-    <img src="~/img/portadaNovo.jpeg" style="width: 100%;"  class="img-fluid"/>
+    <img src="~/img/portadaNovo.jpeg" style="width: 100%; height:100vh !important;"  class="img-fluid"/>
 </section>
