--- a/NovoStandNSpeedWay/Web/Views/Shared/_Layout.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Shared/_Layout.cshtml
@@ -117,77 +117,109 @@
                                     </a>
                                 }
 
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-
-                                        @{
-                                            if (url == "/Roles/index")
-                                            {
-                                                <a class="dropdown-item activar" href="/Roles/index">Roles</a>
-                                            }
-                                            else
-                                            {
-                                                <a class="dropdown-item" href="/Roles/index">Roles</a>
-                                            }
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
 
-
-                                            if (url == "/Usuarios/Index")
-                                            {
-                                                <a class="dropdown-item activar" href="/Usuarios/Index">Usuarios</a>
-                                            }
-                                            else
-                                            {
-                                                <a class="dropdown-item" href="/Usuarios/Index">Usuarios</a>
-                                            }
+                                @using Web.Models;
+                                @using Newtonsoft.Json;
+                                @{
+                                    var hc = new HomeController();
 
 
-                                            if (url == "/Lectores/Index")
-                                            {
-                                                <a class="dropdown-item activar" href="/Lectores/Index">Lectores</a>
-                                            }
-                                            else
-                                            {
-                                                <a class="dropdown-item" href="/Lectores/Index">Lectores</a>
-                                            }
+                                    List<Usuario> user = null;
 
+                                    if (System.Web.HttpContext.Current.Request[hc.CockieName] != null)
+                                    {
 
-                                            if (url == "/FormaAdquisicion/Index")
-                                            {
-                                                <a class="dropdown-item activar" href="/FormaAdquisicion/Index">Forma Adquisicion</a>
-                                            }
-                                            else
-                                            {
-                                                <a class="dropdown-item" href="/FormaAdquisicion/Index">Forma Adquisicion</a>
-                                            }
+                                        UsuariosController u = new UsuariosController();
+                                        var result = u.Get();
 
-
-
-                                            if (url == "/CentroDeCostos/Index")
-                                            {
-                                                <a class="dropdown-item activar" href="/CentroDeCostos/Index">Centro de Costos</a>
-                                            }
-                                            else
-                                            {
-                                                <a class="dropdown-item" href="/CentroDeCostos/Index">Centro de Costos</a>
-                                            }
-
-                                            if (url == "/Ubicaciones/Index")
-                                            {
-                                                <a class="dropdown-item activar" href="/Ubicaciones/Index">Ubicaciones</a>
-                                            }
-                                            else
-                                            {
-                                                <a class="dropdown-item" href="/Ubicaciones/Index">Ubicaciones</a>
-                                            }
-
+                                        if (result != null)
+                                        {
+                                            var json = JsonConvert.SerializeObject(result);
+                                            user = JsonConvert.DeserializeObject<List<Usuario>>(json.ToString());
+                                            string userID = null;
+                                            userID = System.Web.HttpContext.Current.Request.Cookies[hc.CockieName].Value.ToString();
+                                            user = user.Where(x => x.UsuarioIdInt.ToString() == userID).ToList();
                                         }
 
+                                    }
 
-                                    </div>
+
+
+                                    if (user != null && user.Count > 0 && user.FirstOrDefault().EsAdminBit == true)
+                                    {
+
+                                        if (url == "/Roles/index")
+                                        {
+                                            <a class="dropdown-item activar" href="/Roles/index">Roles</a>
+                                        }
+                                        else
+                                        {
+                                            <a class="dropdown-item" href="/Roles/index">Roles</a>
+                                        }
+
+                                    }
+
+
+
+                                    if (url == "/Usuarios/Index")
+                                    {
+                                        <a class="dropdown-item activar" href="/Usuarios/Index">Usuarios</a>
+                                    }
+                                    else
+                                    {
+                                        <a class="dropdown-item" href="/Usuarios/Index">Usuarios</a>
+                                    }
+
+
+                                    if (url == "/Lectores/Index")
+                                    {
+                                        <a class="dropdown-item activar" href="/Lectores/Index">Lectores</a>
+                                    }
+                                    else
+                                    {
+                                        <a class="dropdown-item" href="/Lectores/Index">Lectores</a>
+                                    }
+
+
+                                    if (url == "/FormaAdquisicion/Index")
+                                    {
+                                        <a class="dropdown-item activar" href="/FormaAdquisicion/Index">Forma Adquisicion</a>
+                                    }
+                                    else
+                                    {
+                                        <a class="dropdown-item" href="/FormaAdquisicion/Index">Forma Adquisicion</a>
+                                    }
+
+
+
+                                    if (url == "/CentroDeCostos/Index")
+                                    {
+                                        <a class="dropdown-item activar" href="/CentroDeCostos/Index">Centro de Costos</a>
+                                    }
+                                    else
+                                    {
+                                        <a class="dropdown-item" href="/CentroDeCostos/Index">Centro de Costos</a>
+                                    }
+
+                                    if (url == "/Ubicaciones/Index")
+                                    {
+                                        <a class="dropdown-item activar" href="/Ubicaciones/Index">Ubicaciones</a>
+                                    }
+                                    else
+                                    {
+                                        <a class="dropdown-item" href="/Ubicaciones/Index">Ubicaciones</a>
+                                    }
+
+                                }
+
+
+                            </div>
                             </li>
 
 
-                        var hc = new HomeController();
+                       
                         if (System.Web.HttpContext.Current.Request[hc.CockieName] != null)
                         {
                             <li>
@@ -210,7 +242,7 @@
 
         @RenderBody()
 
-        <footer class="footer bg-secondary" id="footer">
+        <footer class="footer bg-secondary pt-5" id="footer">
 
             <div class="text-center">
                 <a href="/Home/Index"><img src="/img/NOVO_logosmall-1.png" class="logo-brand mt-5 img-fluid"></a>
